--- a/projects/cadcWCS/README
+++ b/projects/cadcWCS/README
@@ -1,5 +1,5 @@
 
-The cadCWCS library is the java interface to wcsLibJNI which is a thing transaltion layer
+The cadcWCS library is the java interface to wcsLibJNI which is a thing transaltion layer
 on top of wcslib (http://www.atnf.csiro.au/people/mcalabre/WCS/). This library can be built
 on it's own but testing and running requires a functioning build of wcsLibJNI (also in OpenCADC)
 which in turn requires wvslib from the above URL.
